# ETH-Globals-Agentic

./: .gitignore  README.md  package-lock.json
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  run_agent.py
backend/actions/morpho/: borrow.py  leverage.py
backend/agents/: morpho_agent.py
backend/agents/components/: emergency_handler.py  performance_monitor.py  position_manager.py  strategy_analyzer.py
backend/api/: dependencies.py
backend/api/middleware/: auth.py  rate_limit.py
backend/api/routes/: errors.py  health.py  init.py  market.py  position.py  strategy.py  vault.py  websocket.py
backend/api/websocket/: __init__.py  connection.py  handlers.py  manager.py  protocol.py  queue.py  router.py  routes.py
backend/config/: logging.py  settings.py
backend/core/: dependencies.py
backend/core/agents/: __init__.py  base_agent.py
backend/core/agents/morpho/: __init__.py  agent.py
backend/core/agents/morpho/actions/: borrow.py  constants.py  leverage.py  repay.py
backend/core/agents/morpho/components/: data_collector.py  decision_maker.py  emergency_handler.py  performance_monitor.py  position_manager.py  risk_manager.py  strategy_analyzer.py
backend/core/manager/: __init__.py  agent.py  strategy.py
backend/core/strategies/morpho/: StrategyExplaination.md  utils.py
backend/models/: api.py  database.py  inputs.py  market.py  position.py  strategy.py  vault.py  wallet.py  websocket.py
backend/scripts/: init_db.py
backend/services/: cdp_client.py  database.py  monitor.py  morpho.py  morpho_client.py  price_feed.py  vault_service.py  wallet_service.py  websocket.py
backend/strategies/morpho/: eth_loop.py
backend/tests/: test_backend_lifecycle_with_custom_wsclient.py  test_backend_lifecyle.py  test_websocket_connection.py  websocket_test.py
backend/utils/: morpho_constants.py  vault_factory.py  vault_factory_abi.json
contracts/src/: Vault.sol  VaultFactory.sol
frontend/: .env.example  .gitignore  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/blocks/: actions.ts
frontend/components/: app-sidebar-normal.tsx  app-sidebar.tsx  (+14 more)
tests/: test_backend_lifecycle_with_custom_wsclient.py
(+30 files in other folders)
