[tool.poetry]
name = "helenus-ai"
version = "0.1.0"
description = "Helenus AI Trading Agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.8"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
websockets = "^12.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
langchain = "^0.3.4"
langchain-openai = "^0.2.4"
langgraph = "^0.2.39"
cdp-langchain = "^0.0.13"
web3 = "^7.0.0"
aiohttp = "^3.9.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pymongo = {extras = ["srv"], version = "^4.11"}
motor = "^3.7.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn main:app --reload"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
